--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     web: backend/modsim/Dockerfile    
 run:
-  web: python manage.py runserver 0.0.0.0:80
+  web: python manage.py runserver 0.0.0.0:${PORT}
