--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,18 @@
     "@testing-library/user-event": "^7.1.2",
     "d3": "3",
     "function-plot": "^1.19.1",
-    "json-loader": "^0.5.7",
     "mathjs": "^7.0.1",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "worker-loader": "^2.0.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
